# instautomator

./: .gitignore  LICENSE  README.md  docker-compose.yml
app/: pyproject.toml
app/db/: instagram_db_repo.py
app/listener/: main.py
app/models/: instagram.py
app/parser/: instagram.py
browser/: app.js  bun.lockb  config.js  crawling_functions.js  package.json  producer.js  puppet.js  run.js  selectors.js  utils.js
